# knoteboard

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml
knoteboard/: __main__.py  app.py  models.py  storage.py  utils.py
knoteboard/components/: __init__.py  board.py  dialog.py  editbox.py  events.py  item.py  search.py  status.py  tags.py
noteboard/: __main__.py  app.py  models.py  palette.py  storage.py  utils.py
noteboard/components/: __init__.py  board.py  events.py  item.py  status.py
