[project]
name = "noteboard"
version = "0.1.0"
description = "noteboard – is a small command-line personal ticket management tool that provides a Kanban-style board"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1",
    "dateparser>=1.3.0",
    "pydantic>=2.12.5",
    "urwid>=3.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 80
